2007-10-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed regression on the regression fix of a few days ago :)

2007-10-15  Jose Dapena Paz  <jdapena@igalia.com>

	* Some fixes to mozembed build.
	* Disable mozembed packages build in maemo.

2007-10-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* Regression on yesterday's summary related patch. Fixed
	* Regression on yesterday's mime part parser patch. Fixed

2007-10-11  Philip Van Hoof  <pvanhoof@gnome.org>

	* iconv error situation handler
	* Bugfix when the summary file was not yet created for a Maildir

2007-10-10  Jose Dapena Paz  <jdapena@igalia.com>

	* m4/moz.m4: add support for gtkmozembed library using gtkembedmoz.pc.
	Also export mozilla_home.
	* debian/rules.maemo: compile with mozembed support.
	* debian/control.maemo1: compile with mozembed support.
	* tests/c-demo/tny-main.c: remove mozilla calls in main.
	* configure.ac: some fixes for html module detection. Use mozilla home.
	Now we only use detection of xpcom for being sure we've got an engine
	path.
	* Removed libtinymailui-mozembed/mozilla-preferences.{cpp,h}, as we now
	use gtk moz embed api to set preferences.
	* libtinymalui-mozembed/Makefile.am: removed mozilla preferences from
	build.
	* libtinymailui-mozembed/tny-moz-embed-html-mime-part-view.c:
	Now we use gtk moz embed to set preferences. We also set properly the
	component path (mozilla home from used engine), and the profile path
	(using the progname). We set a default chrome without scrollbars.

2007-10-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged camel-mime-utils.c with uptream Camel

2007-10-07  Philip Van Hoof  <pvanhoof@gnome.org>

	* Backported a patch from Niels Christens on Camel to Camel-Lite. The
	patch fixed the behaviour when the server expects a TLS HELLO, while
	SSL version 2 is used.
	* Merged camel-lite with upstream Camel revision 8099
	* Merged bugfix from Matthew Barnes. More information here:
	http://bugzilla.gnome.org/show_bug.cgi?id=437331